[bdist_rpm]
build-requires = python2-devel python-setuptools python-sphinx
requires = python-setuptools >= 0.6c6 python-ctypes
install_script = rpm/install
group = System Environment/Daemons

[tool:pytest]
norecursedirs = examples lib local src

[wheel]
universal = 1

[metadata]
license_file = LICENSE
