[tool:pytest]
norecursedirs = examples lib local src
testpaths = tests/
addopts = --assert=plain --cov=gunicorn --cov-report=xml

[metadata]
license_files = ['LICENSE']
name = gunicorn
version = attr: gunicorn.__version__
author = Benoit Chesneau
author_email = benoitc@gunicorn.org
license = MIT
description = WSGI HTTP Server for UNIX
url = https://gunicorn.org
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet
    Topic :: Utilities
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Server
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
project_urls =
    Documentation = https://docs.gunicorn.org
    Homepage = https://gunicorn.org
    Issue tracker = https://github.com/benoitc/gunicorn/issues
    Source code = https://github.com/benoitc/gunicorn

[options]
packages = find:
zip_safe = False
install_requires =
    importlib_metadata; python_version<"3.8"
    packaging
include_package_data = True
python_requires = >=3.5
tests_require =
    gevent
    eventlet
    cryptography
    coverage
    pytest
    pytest-cov

[options.packages.find]
exclude = examples; tests

[options.extras_require]
gevent = gevent>=1.4.0
eventlet = eventlet>=0.24.1
tornado = tornado>=0.2
gthread =
setproctitle = setproctitle
